# CLine-CMake-Demo

./: .gitignore  CMakeLists.txt  SessionExample.cpp  write_plugin.c
client/include/: IClientRPCService.h  client_types.h  common_types.h
client/lib/: parse.lib  tutorialgencpp.lib
